# juliet

./: .gitignore  .pre-commit-config.yaml  .yamllint  Dockerfile  LICENSE  Makefile  README.md  juliet.cfg  juliet.py  network.drawio  porky.py  pyproject.toml  requirements.txt  setup.cfg
.github/: renovate.json
.github/workflows/: code-quality.yaml  preflight.yaml  static-checks.yaml  unit-tests.yaml
docs/: network.drawio
juliet/: __init__.py  __main__.py  config.py  event.py  message.py  radio.py  version.py
requirements/: core.txt  dev.txt  test.txt
src/juliet/: __init__.py  __main__.py  comm.py  config.py  event.py  irc.py  message.py  radio.py  server.py
test/: test_client.py  test_comms.py  test_message.py  test_radio.py  util.py
tests/: __init__.py  test_message.py  test_radio.py  test_version.py
