[tool.poetry]
name = "juliet"
version = "1.0.1"
description = "A simple IRC relay bot for radio networks."
authors = ["W0JHX <jheddings@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
pyyaml = "^6.0.2"
irc = "^20.5.0"

[tool.poetry.group.dev.dependencies]
GitPython = "^3.1.44"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
coverage = "^7.8.2"
black = "^25.1.0"
isort = "^6.0.1"

[tool.black]
line_length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "G",   # flake8-logging-format
    "RET", # flake8-return
    "N",   # pep8-naming
    "ERA", # eradicate
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line-too-long
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
