[metadata]
name = juliet
version = 0.0.1
author = Jason Heddings
author_email = jheddings@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jheddings/juliet
project_urls =
    Bug Tracker = https://github.com/jheddings/juliet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

